--- a/assets/style/components/portfolio.css
+++ b/assets/style/components/portfolio.css
@@ -20,11 +20,15 @@
     justify-content: flex-start;
 
 }
-.portfolio__content-image img {
-    border-radius: 30px;
-    object-fit: cover;
+.portfolio__content-item {
     max-width: 500px;
     max-height: 500px;
+}
+.portfolio__content-image img {
+    width: 100%;
+    height: 100%;
+    border-radius: 30px;
+    object-fit: cover;
     filter: grayscale(100%);
     -webkit-filter: grayscale(100%);
     transition: 1s;
