--- a/assets/style/components/hero.css
+++ b/assets/style/components/hero.css
@@ -2,32 +2,32 @@
     width: 100%;
     height: calc(100vh - 175px);
 }
-.hero-container {
+.hero__container {
     position: relative;
     width: 100%;
     height: 100%;
     display: flex;
 }
-.hero-video-full {
+.hero__video-full {
     position: absolute;
     left: 0;
     top: 0;
     width: 100%;
     height: 100%;
 }
-.hero-video-full video {
+.hero__video-full video {
     width: 100%;
     height: 100%;
     position: absolute;
     object-fit: cover;
     z-index: 100;
 }
-.hero-title {
+.hero__title {
     max-width: 1170px;
     width: 100%;
     margin: auto;
 }
-.hero-message {
+.hero__message {
     font-family: "DIN Condensed", sans-serif;
 
     font-size: 50px;
